--- a/bower.json
+++ b/bower.json
@@ -1,11 +1,11 @@
 {
-  "name": "adapt-svg",
+  "name": "adapt-svg-animation-lottie",
   "version": "3.1.0",
   "framework": ">=5.8",
-  "homepage": "https://github.com/cgkineo/adapt-svg",
-  "issues": "https://github.com/cgkineo/adapt-svg/issues",
-  "component" : "svg",
-  "displayName" : "Lottie Animation",
+  "homepage": "https://github.com/deltanet/adapt-svg-animation-lottie",
+  "issues": "https://github.com/deltanet/adapt-svg-animation-lottie/issues",
+  "component" : "svg-animation-lottie",
+  "displayName" : "SVG Animation (Lottie)",
   "description": "An svg-based animation exported from Adobe After Effects using the Bodymovin plugin",
   "main": "/js/adapt-svg.js",
   "keywords": [
