Adhere to plugin naming convention: svgAnimationLottie

--- a/bower.json
+++ b/bower.json
@@ -1,10 +1,10 @@
 {
-  "name": "adapt-svg-animation-lottie",
+  "name": "adapt-svgAnimationLottie",
   "version": "3.1.0",
   "framework": ">=5.8",
-  "homepage": "https://github.com/deltanet/adapt-svg-animation-lottie",
-  "issues": "https://github.com/deltanet/adapt-svg-animation-lottie/issues",
-  "component" : "svg-animation-lottie",
+  "homepage": "https://github.com/deltanet/adapt-svgAnimationLottie",
+  "issues": "https://github.com/deltanet/adapt-svgAnimationLottie/issues",
+  "component" : "svgAnimationLottie",
   "displayName" : "SVG Animation (Lottie)",
   "description": "An svg-based animation exported from Adobe After Effects using the Bodymovin plugin",
   "main": "/js/adapt-svg.js",
